# Robo-Grandmizer

./: CMakeLists.txt  README.md  binary_image.txt  client.cpp  convertPosition.py  convert_img.py  cs_floor_nav.cfg  csfloor.world  csfloor_mapping.json  jsonOperations.cpp  jsonOperations.hpp  make_png.py  map.inc  measurements.cpp  measurements.hpp  pathfinding.cpp  pathfinding.hpp  player_simple.cfg  robot.inc  simple.world  simple_client.cpp  special_rooms.json  start_processes.sh  valid_cells.py
scripts/: convert_img.py  make_png.py  valid_cells.py
